<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/group16676"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="0.65"
            android:scaleType="fitXY"
            android:src="@drawable/maskgroup62" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textAlignment="center"
                    android:textColor="@color/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/login_description"
                    android:textAlignment="center"
                    android:textColor="@color/desc"
                    android:textSize="17dp" />

                <LinearLayout
                    android:id="@+id/username_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view1"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_edit_text"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="13dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/username" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="0dp"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:inputType="text"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="@string/username" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view1"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_edit_text"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="13dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/password" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:layout_weight="0.7"
                        android:background="@null"
                        android:hint="@string/password" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_button"
                    android:onClick="goToHome"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="18dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>